--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0-125.0.dev <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  firebase_analytics: ^9.1.2
+  firebase_core: ^1.13.1
   flutter:
     sdk: flutter
   get: ^4.6.1
+  url_launcher: ^6.0.20
   
 dev_dependencies:
   flutter_test:
@@ -17,4 +20,6 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
-  uses-material-design: true
+  uses-material-design: false
+  assets:
+    - assets/
