--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,6 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
-  uses-material-design: false
+  uses-material-design: true
   assets:
     - assets/
