Switch to reactable

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   firebase_core: ^1.13.1
   flutter:
     sdk: flutter
-  get: ^4.6.1
+  get_it: ^7.2.0
+  reactable: ^0.1.4
   url_launcher: ^6.0.20
   
 dev_dependencies:
