--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,27 @@ dependencies:
   get_it: ^7.2.0
   reactable: ^0.1.4
   url_launcher: ^6.0.20
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+  change_app_package_name: ^1.1.0 #de.develappers.rutzzle
+  flutter_launcher_icons: "^0.10.0" 
 
 flutter:
-  uses-material-design: true
+  uses-material-design: true  
   assets:
     - assets/
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+  windows:
+    generate: true
+  macos:
+    generate: true
